css/style.css
/* ... */
.volume-slide {
    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
    
}


.volume-control {
    display: none;
    padding: 10px;
    border-radius: 5px;
}

.volume-slide input[type="range"] {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    outline: none;
    border-radius: 5px;
    border: none; /* Adicionado para remover a borda */
}

.percentual-volume {
    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
    border: none; /* Adicionado para remover a borda */
}

.vagalume a {
    color: #fff;
    text-decoration: underline;
}

.lyrics, .support-btn {
    text-transform: uppercase;
    text-decoration: none;
    color: #fff;
    font-size: 18px;
    font-weight: 800;
    font-family: 'Poppins', sans-serif;
    outline: none;
    transition: .3s;
    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
    border: 2px solid #fff;
    padding: 8px 24px;
    border-radius: 30px;
    display: inline-block;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
    white-space: nowrap;
}

.lyrics:hover, .support-btn:hover {
    text-decoration: none;
    color: #00E1E7;
    border-color: #00E1E7;
}

.lyrics:active, .support-btn:active {
    text-decoration: none;
    color: #000;
    background-color: #fff;
    border-color: #fff;
    text-shadow: none;
}

.lyrics:visited, .support-btn:visited {
    text-decoration: none;
    color: #fff;
}

.modal-content {
    background-color: rgba(0, 0, 0, 0.8);
    color: #fff !important;
    border-radius: 20px;
}

.modal-content .btn {
    border-radius: 20px;
    background-color: #00E1E7;
}

/* Chrome */
input[type=range] {
    -webkit-appearance: none;
    background: transparent;
    width: 100%;
}

input[type=range]:focus {
    outline: none;
}

input[type=range]::-webkit-slider-runnable-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animation: 0.2s;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    background: #fff;
}

input[type=range]::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -8px;
}

/* Firefox */
input[type=range]::-moz-range-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animation: 0.2s;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    background: #fff;
}

input[type=range]::-moz-range-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    border: 0px solid #000000;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
}

/* IE e Edge */
input[type=range]::-ms-track {
    width: 100%;
    height: 5px;
    cursor: pointer;
    animation: 0.2s;
    background: transparent;
    border-color: transparent;
    border-width: 10px 0;
    top: -10px;
    color: transparent;
}

input[type=range]::-ms-fill-lower {
    background: #fff;
    border: 0px solid #000101;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
}

input[type=range]::-ms-fill-upper {
    background: #fff;
    border: 0px solid #000101;
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
}

input[type=range]::-ms-thumb {
    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
    border: 0px solid #000000;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #fff;
    cursor: pointer;
}


.historic h2 {
    color: #fefefe;
    border-bottom: 2px solid #fefefe;
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    margin: 10px 0;
    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);   
    
}


/* ZONA FONDO CANCIONES SONADAS */

.historic article {
    margin: 5px 0;
    padding: 10px;
    background-color: none;
}

.historic .cover-historic { 
    width: 95px;
    height: 95px;
    margin-right: 15px;
    float: left;
    border-radius: 10px;
    background: url('../img/cover.png') no-repeat;
    background-size: cover;
    border: 2px solid #fefefe;
   
    box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.3);
    transition: background-image 1s;
}

/* COLOR TEXTO INFO ARTISTA */
.historic .music-info {
    color: white;
    font-family: 'Poppins', sans-serif;
    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
}


/* COLOR TEXTO CANCION */

.historic .music-info .song {
    width: 100%;
    font-weight: bold;
    font-size: 20px;
    text-transform: uppercase;
    margin-bottom: -5px;
    color: white;
    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
}

@media(max-width: 370px) {
    .cover-album {
        max-width: 100%;
    }
}

@media(max-width: 767px) {
    .info-current-song h2 {
        font-size: 26px !important;
        white-space: normal;
        max-width: 100%;
    }
    .info-current-song h3 {
        font-size: 18px !important;
        white-space: normal;
        max-width: 100%;
    }
    .lyrics, .support-btn {
        font-size: 14px;
        padding: 6px 14px;
    }
    .percentual-volume {
        margin-top: 15px;
    }
}

@media(min-width: 576px) {
    .volume-control {
        display: flex;
    }

    .call-lyrics {
        margin-top: 20px;
    }
}

@media(min-width: 768px) {
    body {
        align-items: center;
    }

    .h1-logo {
        text-align: center;
    }

    .logo {
        display: block;
        z-index: 2;
    }

    .logo img {
        max-width: 200px;
    }

    .web-player {
        height: auto;
        margin-top: 0;
    }

    .cover-album {
        margin: 1vh auto;
    }

    .logo img {
        max-width: 300px;
        margin: 65px 0;
    }

    .info-current-song {
        margin-top: 20px;
        text-align: left;
    }

    .volume-control {
        margin-top: 10%;
    }
}

#buttonPlay {
    padding-left: 10px;
}
#playerButton {
    color: white;
}
/* ... */

